Fix for modal clipping issue

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -296,6 +296,7 @@ ul.connect {
 }
 
 #simplemodal-container {
+    top: 100px !important;
     a.modalCloseImg {
         font-family: FontAwesome;
         font-weight: normal;
