--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -26,7 +26,9 @@
   height: 565px;
   width: 830px;
   #wrapper {
+    width: auto;
     #register {
+      width: auto;
       margin: 0;
     }
   }
